--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-TELEGRAM_BOT_TOKEN=7088809054:AAH0VY88eTl_C1hGfYom6TgWYhufkOkK_iA
-USER_ID=1704458173
+BOT_TOKEN=7088809054:AAFTXG-_PzFR97Z-KmKxQ9GFZ4e9UKvRATI
+ADMIN_ID=1704458173
